fixed grid, stuck at photo preview

--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,1 +1,35 @@
+img {
+  height: 250px;
+  //   width: 250px;
+  //   object-fit: "contain";
+}
 
+ion-grid {
+  width: 100%;
+}
+
+// ion-col {
+//   height: 100%;
+//   border: 2px;
+// }
+
+// ion-row {
+//   height: 100%;
+//   border: 2px;
+// }
+
+// .banner_holder {
+//   width: 100%;
+//   height: 300px;
+//   min-height: 200px;
+//   position: relative;
+//   outline: 2px;
+// }
+
+// .banner_holderImage {
+//   height: 100%;
+//   position: relative;
+//   background: url("http://placekitten.com/g/800/600") no-repeat;
+//   background-size: cover;
+//   background-position: center;
+// }
